--- a/src/styles.css
+++ b/src/styles.css
@@ -190,14 +190,14 @@ form .add-counter-button {
 
 .modal img {
     border-radius: 5px;
-    max-width: 100%;
-    max-height: 100vh;
+    max-width: 90%;
+    max-height: 90%;
 }
 
 .modal button {
     position: absolute;
-    top: 5px;
-    right: 5px;
+    top: 1%;
+    right: 7%;
     width: 25px;
     height: 25px;
     border: none;
